@@ -68,15 +68,15 @@ classdef LfrSwmProcessing < bicas.proc.SwmProcessing
       useZvcti2  = obj.inputSci.isL1r && Bso.get_fv('PROCESSING.L1R.LFR.USE_ZV_CALIBRATION_TABLE_INDEX2');
 
       if useGactRct
-        RctdCaMap = bicas.proc.L1L2.cal.rct.findread.find_read_RCTs_by_regexp_and_ZVCTI_GACT(...
+        RctdCaMap = bicas.proc.L1L2.cal.rct.findread.find_read_RCTs_by_RCT_JSON_and_ZVCTI_GACT(...
           'LFR', rctDir, ...
           InputSciCdf.Ga.CALIBRATION_TABLE, ...
           InputSciCdf.Zv.CALIBRATION_TABLE_INDEX, ...
           InputSciCdf.Zv.BW, ...
-          Bso, L);
+          L);
       else
-        RctdCaMap = bicas.proc.L1L2.cal.rct.findread.find_read_RCTs_by_regexp(...
-          {'BIAS', 'LFR'}, rctDir, Bso, L);
+        RctdCaMap = bicas.proc.L1L2.cal.rct.findread.find_read_RCTs_by_RCT_JSON_and_regexp(...
+          {'LFR'}, rctDir, Bso, L);
       end
 
       Cal = bicas.proc.L1L2.cal.Cal(RctdCaMap, useGactRct, useZvcti2, Bso);
