@@ -84,14 +84,14 @@ classdef TdsSwmProcessing < bicas.proc.SwmProcessing
           size(InputSciCdf.Zv.CALIBRATION_TABLE_INDEX, 1), ...
           1));
 
-        RctdCaMap = bicas.proc.L1L2.cal.rct.findread.find_read_RCTs_by_regexp_and_ZVCTI_GACT(...
+        RctdCaMap = bicas.proc.L1L2.cal.rct.findread.find_read_RCTs_by_RCT_JSON_and_ZVCTI_GACT(...
           tdsRcttid, rctDir, ...
           InputSciCdf.Ga.CALIBRATION_TABLE, ...
           InputSciCdf.Zv.CALIBRATION_TABLE_INDEX, ...
           zv_BW, ...
-          Bso, L);
+          L);
       else
-        RctdCaMap = bicas.proc.L1L2.cal.rct.findread.find_read_RCTs_by_regexp(...
+        RctdCaMap = bicas.proc.L1L2.cal.rct.findread.find_read_RCTs_by_RCT_JSON_and_regexp(...
           {'BIAS', tdsRcttid}, rctDir, Bso, L);
       end
 
